--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 jobs:
-
   build_push_image:
 
     runs-on: ubuntu-latest
@@ -15,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag bcglabacr01.azurecr.io/workingwithacr:latest
+      run: docker build . --file Dockerfile --tag bcglabacr01.azurecr.io/workingwithacr-jairo:latest
      
     - name: Azure Container Registry Login
       uses: Azure/docker-login@v1
@@ -28,4 +27,4 @@ jobs:
         login-server: bcglabacr01.azurecr.io
         
     - name: Push Image  
-      run: docker push bcglabacr01.azurecr.io/workingwithacr:latest
+      run: docker push bcglabacr01.azurecr.io/workingwithacr-jairo:latest
